--- a/action.yml
+++ b/action.yml
@@ -9,15 +9,15 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  root:
+    description: "The root directory from which the action will recursively search Kubernetes manifests."
     required: true
-    default: '1000'
+    default: '.'
 
 # Define your outputs here.
 outputs:
-  time:
-    description: 'Your output description here'
+  count:
+    description: "found manifest count"
 
 runs:
   using: node20
