--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     ]
   },
   "dependencies": {
-    "@actions/core": "^1.10.1"
+    "@actions/core": "^1.10.1",
+    "@actions/glob": "^0.4.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
